create portfolio tabs

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
 		<div class="container">
 			<h3 class="portfolio__subtitle">Portfolio</h3>
 			<h2 class="portfolio__title">Works</h2>
+			<ul class="portfolio__tabs">
+				<li class="portfolio__tab portfolio__tab_active">All</li>
+				<li class="portfolio__tab">Paintings</li>
+				<li class="portfolio__tab">Graphics</li>
+			</ul>
 			<div class="portfolio__body">
 				<div class="portfolio__item">
 					<img src="img/painting_1.jpg" alt="painting" class="portfolio__img">
