add js functional for tabs

--- a/src/index.html
+++ b/src/index.html
@@ -12,48 +12,48 @@
 			<h3 class="portfolio__subtitle">Portfolio</h3>
 			<h2 class="portfolio__title">Works</h2>
 			<ul class="portfolio__tabs">
-				<li class="portfolio__tab portfolio__tab_active">All</li>
-				<li class="portfolio__tab">Paintings</li>
-				<li class="portfolio__tab">Graphics</li>
+				<li data-tab="all" class="portfolio__tab portfolio__tab_active">All</li>
+				<li data-tab="painting" class="portfolio__tab">Paintings</li>
+				<li data-tab="graphics" class="portfolio__tab">Graphics</li>
 			</ul>
 			<div class="portfolio__body">
-				<div class="portfolio__item">
+				<div class="portfolio__item all painting">
 					<img src="img/painting_1.jpg" alt="painting" class="portfolio__img">
 					<h4 class="portfolio__descr">Painting. Materials: gouache, paper</h4>
 				</div>
-				<div class="portfolio__item">
+				<div class="portfolio__item all painting">
 					<img src="img/painting_2.jpg" alt="painting" class="portfolio__img">
 					<h4 class="portfolio__descr">Batik on the theme of fish restaurant. Materials: cotton fabric, tint, paraffin</h4>
 				</div>
-				<div class="portfolio__item">
+				<div class="portfolio__item all painting">
 					<img src="img/painting_3.jpg" alt="painting" class="portfolio__img">
 					<h4 class="portfolio__descr">Painting. Materials: gouache, paper</h4>
 				</div>
-				<div class="portfolio__item">
+				<div class="portfolio__item all painting">
 					<img src="img/painting_4.jpg" alt="drawing" class="portfolio__img">
 					<h4 class="portfolio__descr">Drawing. Materials: pencil, paper</h4>
 				</div>
-				<div class="portfolio__item">
+				<div class="portfolio__item all graphics">
 					<img src="img/poster_1.JPG" alt="poster" class="portfolio__img">
 					<h4 class="portfolio__descr">Advertising poster for international poetry and musical events &quot;Poezia.doc&quot;. Technology: vector graphic, CorelDraw. Materials: print on paper, 210mm x 297mm</h4>
 				</div>
-				<div class="portfolio__item">
+				<div class="portfolio__item all graphics">
 					<img src="img/poster_2.JPG" alt="poster" class="portfolio__img">
 					<h4 class="portfolio__descr">Advertising leaflet for travel agency &quot;MEO-TOUR&quot;. Technology: vector graphic combined with photo, CorelDraw. Materials: print on paper, 148mm x 210mm</h4>
 				</div>
-				<div class="portfolio__item">
+				<div class="portfolio__item all graphics">
 					<img src="img/cover.JPG" alt="book cover" class="portfolio__img">
 					<h4 class="portfolio__descr">Design of book cover &quot;The World Art Culture&quot;. Technology: vector graphic combined with photo, CorelDraw. Materials: print on paper, 148mm x 210mm</h4>
 				</div>
-				<div class="portfolio__item">
+				<div class="portfolio__item all graphics">
 					<img src="img/cards.JPG" alt="business cards" class="portfolio__img">
 					<h4 class="portfolio__descr">Design of business cards for taxi company &quot;Sobol (Sable)&quot;. Technology: vector graphic, vector graphic combined with photo, CorelDraw. Materials: print on paper, 50mm x 90mm</h4>
 				</div>
-				<div class="portfolio__item">
+				<div class="portfolio__item all graphics">
 					<img src="img/identity_1.JPG" alt="identity" class="portfolio__img">
 					<h4 class="portfolio__descr">Corporate identity for cottage microdistrict &quot;Yelovyj (Spruce)&quot;. Technology: vector graphic combined with photo, CorelDraw</h4>
 				</div>
-				<div class="portfolio__item">
+				<div class="portfolio__item all graphics">
 					<img src="img/identity_2.JPG" alt="identity" class="portfolio__img">
 					<h4 class="portfolio__descr">Corporate identity for cottage microdistrict &quot;Yelovyj&quot;. Technology: vector graphic combined with photo, CorelDraw</h4>
 				</div>
