--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
 		</div>
 	</div>
 	<div class="modal">
+		<button type="button" class="modal__close">×</button>
 	</div>
 	<script src="script.js"></script>
 </body>
