edit src for images

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 					<h4 class="portfolio__descr">Advertising poster for international poetry and musical events &quot;Poezia.doc&quot;. Technology: vector graphic, CorelDraw. Materials: print on paper, 210mm x 297mm</h4>
 				</div>
 				<div class="portfolio__item all graphics">
-					<img src="img/poster_2.JPG" alt="poster" class="portfolio__img">
+					<img src="img/poster_2.jpg" alt="poster" class="portfolio__img">
 					<h4 class="portfolio__descr">Advertising leaflet for travel agency &quot;MEO-TOUR&quot;. Technology: vector graphic combined with photo, CorelDraw. Materials: print on paper, 148mm x 210mm</h4>
 				</div>
 				<div class="portfolio__item all graphics">
@@ -54,7 +54,7 @@
 					<h4 class="portfolio__descr">Corporate identity for cottage microdistrict &quot;Yelovyj (Spruce)&quot;. Technology: vector graphic combined with photo, CorelDraw</h4>
 				</div>
 				<div class="portfolio__item all graphics">
-					<img src="img/identity_2.JPG" alt="identity" class="portfolio__img">
+					<img src="img/identity_2.jpg" alt="identity" class="portfolio__img">
 					<h4 class="portfolio__descr">Corporate identity for cottage microdistrict &quot;Yelovyj&quot;. Technology: vector graphic combined with photo, CorelDraw</h4>
 				</div>
 			</div>
