edit section name in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style.min.css">
 </head>
 <body>
-	<div class="portfolio">
+	<section class="portfolio">
 		<div class="container">
 			<h3 class="portfolio__subtitle">Portfolio</h3>
 			<h2 class="portfolio__title">Works</h2>
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 	<div class="modal">
 		<button type="button" class="modal__close">×</button>
 	</div>
