add author name

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 	<section class="portfolio">
 		<div class="container">
 			<h3 class="portfolio__subtitle">Portfolio</h3>
-			<h2 class="portfolio__title">Works</h2>
+			<h1 class="portfolio__title">Works created by Olga Yakutova</h1>
 			<ul class="portfolio__tabs">
 				<li data-tab="all" class="portfolio__tab portfolio__tab_active">All</li>
 				<li data-tab="painting" class="portfolio__tab">Paintings</li>
@@ -55,7 +55,7 @@
 				</div>
 				<div class="portfolio__item all graphics">
 					<img src="img/identity_2.jpg" alt="identity" class="portfolio__img">
-					<h4 class="portfolio__descr">Corporate identity for cottage microdistrict &quot;Yelovyj&quot;. Technology: vector graphic combined with photo, CorelDraw</h4>
+					<h4 class="portfolio__descr">Corporate identity for cottage microdistrict &quot;Yelovyj (Spruce)&quot;. Technology: vector graphic combined with photo, CorelDraw</h4>
 				</div>
 			</div>
 		</div>
