change image for cards, edit description to graphics

--- a/src/index.html
+++ b/src/index.html
@@ -35,27 +35,27 @@
 				</div>
 				<div class="portfolio__item all graphics">
 					<img src="img/poster_1.JPG" alt="poster" class="portfolio__img">
-					<h4 class="portfolio__descr">Advertising poster for international poetry and musical events &quot;Poezia.doc&quot;. Technology: vector graphic, CorelDraw. Materials: print on paper, 210mm x 297mm</h4>
+					<h4 class="portfolio__descr">Advertising poster for international poetry and musical events &quot;Poezia.doc&quot;. Technology: vector graphics, CorelDraw. Materials: print on paper, 210mm x 297mm</h4>
 				</div>
 				<div class="portfolio__item all graphics">
 					<img src="img/poster_2.jpg" alt="poster" class="portfolio__img">
-					<h4 class="portfolio__descr">Advertising leaflet for travel agency &quot;MEO-TOUR&quot;. Technology: vector graphic combined with photo, CorelDraw. Materials: print on paper, 148mm x 210mm</h4>
+					<h4 class="portfolio__descr">Advertising leaflet for travel agency &quot;MEO-TOUR&quot;. Technology: vector graphics combined with photo, CorelDraw. Materials: print on paper, 148mm x 210mm</h4>
 				</div>
 				<div class="portfolio__item all graphics">
 					<img src="img/cover.JPG" alt="book cover" class="portfolio__img">
-					<h4 class="portfolio__descr">Design of book cover &quot;The World Art Culture&quot;. Technology: vector graphic combined with photo, CorelDraw. Materials: print on paper, 148mm x 210mm</h4>
+					<h4 class="portfolio__descr">Design of book cover &quot;The World Art Culture&quot;. Technology: vector graphics combined with photo, CorelDraw. Materials: print on paper, 148mm x 210mm</h4>
 				</div>
 				<div class="portfolio__item all graphics">
-					<img src="img/cards.JPG" alt="business cards" class="portfolio__img">
-					<h4 class="portfolio__descr">Design of business cards for taxi company &quot;Sobol (Sable)&quot;. Technology: vector graphic, vector graphic combined with photo, CorelDraw. Materials: print on paper, 50mm x 90mm</h4>
+					<img src="img/cards.png" alt="business cards" class="portfolio__img">
+					<h4 class="portfolio__descr">Design of business cards for taxi company &quot;Sobol (Sable)&quot;. Technology: vector graphics (top), vector graphics combined with photo (bottom), CorelDraw. Materials: print on paper, 50mm x 90mm</h4>
 				</div>
 				<div class="portfolio__item all graphics">
 					<img src="img/identity_1.JPG" alt="identity" class="portfolio__img">
-					<h4 class="portfolio__descr">Corporate identity for cottage microdistrict &quot;Yelovyj (Spruce)&quot;. Technology: vector graphic combined with photo, CorelDraw</h4>
+					<h4 class="portfolio__descr">Corporate identity for cottage microdistrict &quot;Yelovyj (Spruce)&quot;. Technology: vector graphics combined with photo, CorelDraw</h4>
 				</div>
 				<div class="portfolio__item all graphics">
 					<img src="img/identity_2.jpg" alt="identity" class="portfolio__img">
-					<h4 class="portfolio__descr">Corporate identity for cottage microdistrict &quot;Yelovyj (Spruce)&quot;. Technology: vector graphic combined with photo, CorelDraw</h4>
+					<h4 class="portfolio__descr">Corporate identity for cottage microdistrict &quot;Yelovyj (Spruce)&quot;. Technology: vector graphics combined with photo, CorelDraw</h4>
 				</div>
 			</div>
 		</div>
